# trading_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
openspec/: config.yaml
scripts/: measure_candle_latency.py  probe_ingestion_smoke.py  probe_order_smoke.py  probe_stop_close_source.py  probe_ws_ohlc.py  rebalance_etoro.py
src/: __main__.py  api.py  config.py  ingestion.py  ingestion_polygon.py  reconciler.py  token_refresher.py
src/application/: fade_trades.py  rebalance_portfolio.py  reconcile_closed_trades.py  trading_cycle.py
src/domain/: boundary.py
tests/: conftest.py
tests/fakes/: fake_broker.py  fake_candle_store.py  fake_clock.py  fake_history.py  fake_http.py  fake_journal.py  fake_session_cache.py
tests/integration/: test_candle_migration.py  test_fade_strategy_anti_drift.py  test_postgres_candle_store.py  test_postgres_journal.py  test_postgres_session_cache.py  test_ws_event_persists.py
tests/unit/: test_cached_session.py  test_candle_api.py  test_candle_history_port.py  test_candle_row.py  test_candle_store_port.py  test_capital_broker.py  test_capital_candle_history.py  test_capital_session.py  test_capital_trade_history.py  test_clock.py  test_close_source_derivation.py  test_config.py  test_etoro_adapter.py  test_fade_strategy.py  test_fade_trades_service.py  test_fake_clock.py  test_ingestion.py  test_ingestion_polygon.py  test_journal_entities.py  test_main_loop.py  test_main_wiring.py  (+16 more)
(+135 files in other folders)
