[project]
name = "trading-engine"
version = "0.1.0"
description = "Hexagonal trading engine running validated strategies against pluggable broker providers"
requires-python = ">=3.11,<4.0"
dependencies = [
    "requests",
    "python-dotenv",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "psycopg[binary]>=3.1",
    "websocket-client>=1.9,<2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
